# snappy

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README  THANKS  ToDo  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  dogme  snappy.doap
data/: Makefile.am  Makefile.in  README  mpris.xml  snappy.desktop
data/icons/: Makefile.am  Makefile.in
data/icons/256x256/: Makefile.am  Makefile.in
data/icons/48x48/: Makefile.am  Makefile.in
docs/: clutter_controls_layout  keyboard_controls
src/: Makefile.am  Makefile.in  dlna.c  dlna.h  dogme.c  dogme.h  dogme.py  gst_engine.c  gst_engine.h  mpris.c  mpris.h  screensaver.c  screensaver.h  snappy.c  ui.py  user_interface.c  user_interface.h  utils.c  utils.h
