icons_DATA = \
    audio-stream-toggle.png \
    audio-volume-high.png \
    audio-volume-low.png \
    media-actions-pause.png \
    media-actions-segment-point.png \
    media-actions-start.png \
    subtitle-toggle.png \
    video-stream-toggle.png \
    vid-panel.png
iconsdir = $(datadir)/snappy

EXTRA_DIST = \
    $(icons_DATA)
