SUBDIRS = icons

icons_DATA = \
    audio-stream-toggle.png \
    audio-volume-high.png \
    audio-volume-low.png \
    media-actions-pause.png \
    media-actions-segment-point.png \
    media-actions-start.png \
    subtitles-active.png \
    subtitles-inactive.png \
    video-stream-toggle.png \
    vid-panel.png
iconsdir = $(datadir)/snappy

desktop_DATA = snappy.desktop
desktopdir = $(datadir)/applications

EXTRA_DIST = \
    $(icons_DATA) $(desktop_DATA)
