SUBDIRS = icons

icons_DATA = \
    audio-stream-toggle.png \
    audio-volume-high.svg \
    audio-volume-low.svg \
    fullscreen.svg \
    media-actions-pause.svg \
    media-actions-start.svg \
    subtitles-active.svg \
    subtitles-inactive.svg \
    video-stream-toggle.png
iconsdir = $(datadir)/snappy

desktop_DATA = snappy.desktop
desktopdir = $(datadir)/applications

EXTRA_DIST = \
    $(icons_DATA) $(desktop_DATA)
